--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <body *ngIf="verificar()">
     <app-navbar-administrador></app-navbar-administrador>
 
     <div class="litle">
@@ -21,7 +21,12 @@
           placeholder="Bucar por.."
         />
       </mat-form-field>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8"
+        *ngIf="validarRol()"
+      >
         <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
@@ -80,6 +85,7 @@
           <th mat-header-cell *matHeaderCellDef>Editar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              *ngIf="role === 'administrador'"
               class="botoncito1"
               mat-raised-button
               [routerLink]="['ediciones', element.idLocalizacion]"
@@ -92,6 +98,7 @@
           <th mat-header-cell *matHeaderCellDef>Eliminar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              *ngIf="role === 'administrador'"
               class="botoncito2"
               mat-raised-button
               (click)="eliminar(element.idLocalizacion)"
