--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body *ngIf="verificar()">
     <app-navbar-administrador></app-navbar-administrador>
 
     <div class="litle">
@@ -21,7 +21,12 @@
           placeholder="Bucar por.."
         />
       </mat-form-field>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8"
+        *ngIf="validarRol()"
+      >
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
@@ -92,6 +97,7 @@
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
+              *ngIf="role === 'administrador'"
               class="botoncito1"
               [routerLink]="['ediciones', element.idVehiculo]"
             >
@@ -103,6 +109,7 @@
           <th mat-header-cell *matHeaderCellDef>Eliminar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              *ngIf="role === 'administrador'"
               mat-raised-button
               class="botoncito2"
               (click)="eliminar(element.idVehiculo)"
