Implementación de las validaciones en el registrar Incidente
Implementación de las validaciones en el registrar Incidente

--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -33,10 +33,11 @@
               placeholder="Descripcion"
               formControlName="descripcion"
             />
-            <mat-error
-              *ngIf="obtenerControlCampo('descripcion')?.errors?.['required']"
-            >
-              El nombre es obligatorio.
+            <mat-error *ngIf="form.get('descripcion')?.invalid">
+              {{
+                form.get('descripcion')!.errors?.['required'] ? 'La descripcion es obligatorio' :
+                (form.get('descripcion')!.errors?.['maxlength'] ? 'No puede tener más de 100 caracteres' :'')
+              }}
             </mat-error>
           </mat-form-field>
 
@@ -72,7 +73,9 @@
           </mat-form-field>
 
           <br />
-          <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
+          <button class="botonRegistro" mat-raised-button color="primary">
+            Registrar
+          </button>
         </form>
       </div>
     </div>
