Implementación de la validación en el registrar estacionamiento
Implementación de la validación en el registrar estacionamiento

--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -36,10 +36,11 @@
                 placeholder="capacidad"
                 formControlName="capacidad"
               />
-              <mat-error
-                *ngIf="obtenerControlCampo('capacidad')?.errors?.['required']"
-              >
-                La capacidad es obligatoria.
+              <mat-error *ngIf="form.get('capacidad')?.invalid">
+                {{
+                  form.get('capacidad')!.errors?.['required'] ? 'La capacidad es obligatorio' :
+                  (form.get('capacidad')!.errors?.['pattern'] ? 'No puede ser decimal' :'')
+                }}
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill" class="example-full-width">
@@ -50,12 +51,13 @@
                 [matDatepicker]="picker"
                 formControlName="fechaRegistro"
                 [max]="maxFecha"
+                readonly="true"
               />
               <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle
+              <!--<mat-datepicker-toggle
                 matIconSuffix
                 [for]="picker"
-              ></mat-datepicker-toggle>
+              ></mat-datepicker-toggle>-->
               <mat-datepicker #picker></mat-datepicker>
               <mat-error
                 *ngIf="obtenerControlCampo('fechaRegistro')?.errors?.['required']"
@@ -105,6 +107,7 @@
                 matInput
                 placeholder="promedioValoracion"
                 formControlName="promedioValoracion"
+                readonly="true"
               />
               <mat-error
                 *ngIf="obtenerControlCampo('promedioValoracion')?.errors?.['required']"
@@ -149,7 +152,12 @@
 
             <mat-form-field class="example-full-width">
               <mat-label>Foto</mat-label>
-              <input matInput placeholder="foto" formControlName="foto" />
+              <input
+                matInput
+                placeholder="foto"
+                formControlName="foto"
+                readonly="true"
+              />
               <mat-error
                 *ngIf="obtenerControlCampo('foto')?.errors?.['required']"
               >
@@ -173,7 +181,8 @@
         </div>
         <div class="btn-container">
           <button mat-raised-button color="primary">Registrar</button>
-        </div>      </form>
+        </div>
+      </form>
     </div>
   </body>
 </html>
