Corrección de la validación fecha en el registro de ReservaEstacionamiento
Corrección de la validación fecha en el registro de ReservaEstacionamiento

--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -57,12 +57,13 @@
               [matDatepicker]="picker"
               formControlName="fecha"
               [min]="minFecha"
+              readonly="true"
             />
             <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle
+            <!--<mat-datepicker-toggle
               matIconSuffix
               [for]="picker"
-            ></mat-datepicker-toggle>
+            ></mat-datepicker-toggle>-->
             <mat-datepicker #picker></mat-datepicker>
             <mat-error
               *ngIf="obtenerControlCampo('fecha')?.errors?.['required']"
