--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -33,13 +33,13 @@
         <!-- idVehiculo Column -->
 
         <ng-container matColumnDef="codigo" sticky>
-          <th mat-header-cell *matHeaderCellDef>codigo</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">{{ element.idVehiculo }}</td>
         </ng-container>
 
         <!-- placa Column -->
         <ng-container matColumnDef="placa">
-          <th mat-header-cell *matHeaderCellDef>placa</th>
+          <th mat-header-cell *matHeaderCellDef>Placa</th>
           <td mat-cell *matCellDef="let element">
             {{ element.placaVehiculo }}
           </td>
@@ -47,7 +47,7 @@
 
         <!-- categoriaVehiculo Column -->
         <ng-container matColumnDef="categoria">
-          <th mat-header-cell *matHeaderCellDef>categoria</th>
+          <th mat-header-cell *matHeaderCellDef>Categoria</th>
           <td mat-cell *matCellDef="let element">
             {{ element.categoriaVehiculo }}
           </td>
@@ -55,14 +55,14 @@
 
         <!-- colorVehiculo Column -->
         <ng-container matColumnDef="color">
-          <th mat-header-cell *matHeaderCellDef>color</th>
+          <th mat-header-cell *matHeaderCellDef>Color</th>
           <td mat-cell *matCellDef="let element">
             {{ element.colorVehiculo }}
           </td>
         </ng-container>
         <!-- marca Column -->
         <ng-container matColumnDef="marca">
-          <th mat-header-cell *matHeaderCellDef>marca</th>
+          <th mat-header-cell *matHeaderCellDef>Marca</th>
           <td mat-cell *matCellDef="let element">
             {{ element.marcaVehiculo }}
           </td>
@@ -70,7 +70,7 @@
 
         <!-- tamanio Column -->
         <ng-container matColumnDef="tamanio">
-          <th mat-header-cell *matHeaderCellDef>tamanio</th>
+          <th mat-header-cell *matHeaderCellDef>Tamanio</th>
           <td mat-cell *matCellDef="let element">
             {{ element.tamanioVehiculo }}
           </td>
@@ -78,7 +78,7 @@
 
         <!-- tarjetaPropiedadVehiculo Column -->
         <ng-container matColumnDef="tarjeta de propiedad">
-          <th mat-header-cell *matHeaderCellDef>tarjeta de propiedad</th>
+          <th mat-header-cell *matHeaderCellDef>Tarjeta de propiedad</th>
           <td mat-cell *matCellDef="let element">
             {{ element.tarjetaPropiedadVehiculo }}
           </td>
@@ -86,14 +86,14 @@
 
         <!-- imagenVehiculo Column -->
         <ng-container matColumnDef="imagen">
-          <th mat-header-cell *matHeaderCellDef>imagen</th>
+          <th mat-header-cell *matHeaderCellDef>Imagen</th>
           <td mat-cell *matCellDef="let element">
             {{ element.imagenVehiculo }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="accion01" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef>editar</th>
+          <th mat-header-cell *matHeaderCellDef>Editar</th>
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
