--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
@@ -25,7 +25,7 @@
 
         <!-- Position Column -->
         <ng-container matColumnDef="codigo">
-          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idComentario }}
           </td>
@@ -45,16 +45,23 @@
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="fechacreacion">
-          <th mat-header-cell *matHeaderCellDef>Fecha de creacion</th>
+          <th mat-header-cell *matHeaderCellDef>Fecha de Publicacion</th>
           <td mat-cell *matCellDef="let element">
             {{ element.fechaCreacion }}
           </td>
         </ng-container>
         <!-- Symbol Column -->
         <ng-container matColumnDef="idUsuario">
-          <th mat-header-cell *matHeaderCellDef>id de la reserva</th>
+          <th mat-header-cell *matHeaderCellDef>
+            Codigo y Direccion de la reserva
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
+            {{ element.reservaEstacionamiento.idReservaEstacionamiento
+            }}{{ " - " }}
+            {{
+              element.reservaEstacionamiento.horarioEstacionamiento
+                .estacionamiento.localizacion.direccion
+            }}
           </td>
         </ng-container>
 
