--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
@@ -34,7 +34,7 @@
 
         <!-- Position Column -->
         <ng-container matColumnDef="idEstacionamiento" sticky>
-          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idEstacionamiento }}
           </td>
@@ -42,7 +42,7 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="tipoEstacionamiento">
-          <th mat-header-cell *matHeaderCellDef>tipoEstacionamiento</th>
+          <th mat-header-cell *matHeaderCellDef>Tipo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.tipoEstacionamiento }}
           </td>
@@ -50,58 +50,58 @@
 
         <!-- Weight Column -->
         <ng-container matColumnDef="disponibilidad">
-          <th mat-header-cell *matHeaderCellDef>disponibilidad</th>
+          <th mat-header-cell *matHeaderCellDef>Disponibilidad</th>
           <td mat-cell *matCellDef="let element">
             {{ element.disponibilidad }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="foto">
-          <th mat-header-cell *matHeaderCellDef>foto</th>
+          <th mat-header-cell *matHeaderCellDef>Foto</th>
           <td mat-cell *matCellDef="let element">
             {{ element.foto }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="promedioValoracion">
-          <th mat-header-cell *matHeaderCellDef>promedioValoracion</th>
+          <th mat-header-cell *matHeaderCellDef>Promedio-Valoracion</th>
           <td mat-cell *matCellDef="let element">
             {{ element.promedioValoracion }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="capacidad">
-          <th mat-header-cell *matHeaderCellDef>capacidad</th>
+          <th mat-header-cell *matHeaderCellDef>Capacidad</th>
           <td mat-cell *matCellDef="let element">
             {{ element.capacidad }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="fechaRegistro">
-          <th mat-header-cell *matHeaderCellDef>fechaRegistro</th>
+          <th mat-header-cell *matHeaderCellDef>Fecha de Registro</th>
           <td mat-cell *matCellDef="let element">
             {{ element.fechaRegistro }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="precio">
-          <th mat-header-cell *matHeaderCellDef>precio</th>
+          <th mat-header-cell *matHeaderCellDef>Precio</th>
           <td mat-cell *matCellDef="let element">
             {{ element.precio }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="usuario">
-          <th mat-header-cell *matHeaderCellDef>usuario</th>
+          <th mat-header-cell *matHeaderCellDef>Dueño</th>
           <td mat-cell *matCellDef="let element">
             {{ element.usuario.nombre }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="localizacion">
-          <th mat-header-cell *matHeaderCellDef>localizacion</th>
+          <th mat-header-cell *matHeaderCellDef>Localizacion</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.localizacion.idLocalizacion }}
+            {{ element.localizacion.direccion }}
           </td>
         </ng-container>
 
