--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
@@ -30,13 +30,13 @@
       >
         <!-- ID -->
         <ng-container matColumnDef="idHorario">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">{{ element.idHorario }}</td>
         </ng-container>
 
         <!-- fecha -->
         <ng-container matColumnDef="fecha">
-          <th mat-header-cell *matHeaderCellDef>fecha</th>
+          <th mat-header-cell *matHeaderCellDef>Fecha</th>
           <td mat-cell *matCellDef="let element">
             {{ element.fecha }}
           </td>
