--- a/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
@@ -25,33 +25,32 @@
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- idIncidente Column -->
         <ng-container matColumnDef="idIncidente">
-          <th mat-header-cell *matHeaderCellDef>idIncidente</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idIncidente }}
           </td>
         </ng-container>
-
-        <!-- descripcion Column -->
-        <ng-container matColumnDef="descripcion">
-          <th mat-header-cell *matHeaderCellDef>descripcion</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.descripcion }}
-          </td>
-        </ng-container>
-
         <!-- tipoIncidente Column -->
         <ng-container matColumnDef="tipoIncidente">
-          <th mat-header-cell *matHeaderCellDef>tipoIncidente</th>
+          <th mat-header-cell *matHeaderCellDef>Tipo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.tipoIncidente }}
           </td>
         </ng-container>
 
+        <!-- descripcion Column -->
+        <ng-container matColumnDef="descripcion">
+          <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.descripcion }}
+          </td>
+        </ng-container>
+
         <!-- usuario Column -->
         <ng-container matColumnDef="usuario">
-          <th mat-header-cell *matHeaderCellDef>usuario</th>
+          <th mat-header-cell *matHeaderCellDef>Usuario</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.usuario.idUsuario }}
+            {{ element.usuario.username }}
           </td>
         </ng-container>
 
