--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -32,7 +32,7 @@
 
         <!-- idLocalizacion Column -->
         <ng-container matColumnDef="idLocalizacion">
-          <th mat-header-cell *matHeaderCellDef>idLocalizacion</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idLocalizacion }}
           </td>
@@ -40,13 +40,13 @@
 
         <!-- direccion Column -->
         <ng-container matColumnDef="direccion">
-          <th mat-header-cell *matHeaderCellDef>direccion</th>
+          <th mat-header-cell *matHeaderCellDef>Direccion</th>
           <td mat-cell *matCellDef="let element">{{ element.direccion }}</td>
         </ng-container>
 
         <!-- distrito Column -->
         <ng-container matColumnDef="distrito">
-          <th mat-header-cell *matHeaderCellDef>distrito</th>
+          <th mat-header-cell *matHeaderCellDef>Distrito</th>
           <td mat-cell *matCellDef="let element">
             {{ element.distrito }}
           </td>
@@ -54,12 +54,12 @@
 
         <!-- region Column -->
         <ng-container matColumnDef="region">
-          <th mat-header-cell *matHeaderCellDef>region</th>
+          <th mat-header-cell *matHeaderCellDef>Region</th>
           <td mat-cell *matCellDef="let element">{{ element.region }}</td>
         </ng-container>
         <!-- referencia Column -->
         <ng-container matColumnDef="referencia">
-          <th mat-header-cell *matHeaderCellDef>referencia</th>
+          <th mat-header-cell *matHeaderCellDef>Referencia</th>
           <td mat-cell *matCellDef="let element">
             {{ element.referencia }}
           </td></ng-container
@@ -67,7 +67,7 @@
 
         <!-- referencia Column -->
         <ng-container matColumnDef="latitud">
-          <th mat-header-cell *matHeaderCellDef>latitud</th>
+          <th mat-header-cell *matHeaderCellDef>Latitud</th>
           <td mat-cell *matCellDef="let element">
             {{ element.latitud }}
           </td></ng-container
@@ -75,7 +75,7 @@
 
         <!-- referencia Column -->
         <ng-container matColumnDef="longitud">
-          <th mat-header-cell *matHeaderCellDef>longitud</th>
+          <th mat-header-cell *matHeaderCellDef>Longitud</th>
           <td mat-cell *matCellDef="let element">
             {{ element.longitud }}
           </td></ng-container
