--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.html
@@ -26,7 +26,7 @@
 
         <!-- idMembresia Column -->
         <ng-container matColumnDef="idMembresia">
-          <th mat-header-cell *matHeaderCellDef>idMembresia</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idMembresia }}
           </td>
@@ -34,7 +34,7 @@
 
         <!-- tipoMembresia Column -->
         <ng-container matColumnDef="tipoMembresia">
-          <th mat-header-cell *matHeaderCellDef>tipoMembresia</th>
+          <th mat-header-cell *matHeaderCellDef>Tipo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.tipoMembresia }}
           </td>
@@ -42,7 +42,7 @@
 
         <!-- fechaInicio Column -->
         <ng-container matColumnDef="fechaInicio">
-          <th mat-header-cell *matHeaderCellDef>fechaInicio</th>
+          <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
           <td mat-cell *matCellDef="let element">
             {{ element.fechaInicio }}
           </td>
@@ -50,13 +50,13 @@
 
         <!-- fechaFin Column -->
         <ng-container matColumnDef="fechaFin">
-          <th mat-header-cell *matHeaderCellDef>fechaFin</th>
+          <th mat-header-cell *matHeaderCellDef>Fecha de Fin</th>
           <td mat-cell *matCellDef="let element">{{ element.fechaFin }}</td>
         </ng-container>
 
         <!-- precio Column -->
         <ng-container matColumnDef="precio">
-          <th mat-header-cell *matHeaderCellDef>precio</th>
+          <th mat-header-cell *matHeaderCellDef>Precio</th>
           <td mat-cell *matCellDef="let element">
             {{ element.precio }}
           </td></ng-container
