--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -21,7 +21,7 @@
               formControlName="idReservaEstacionamiento"
             />
           </mat-form-field>
-          <mat-form-field class="example-full-width">
+          <mat-form-field class="example-full-width" *ngIf="edicion">
             <mat-label>Estado</mat-label>
             <mat-select formControlName="estado">
               <mat-option *ngFor="let p of estado" [value]="p.value">
