--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -23,7 +23,7 @@
 
         <!-- Position Column -->
         <ng-container matColumnDef="codigo" sticky>
-          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <th mat-header-cell *matHeaderCellDef>Codigo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idUsuario }}
           </td>
