implementacion de los reportes y mejora del registro desde afuera

--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -467,6 +467,11 @@
               >Cantidad de reservas por usuario</a
             >
           </li>
+          <li *ngIf="role == 'administrador'">
+            <a href="components/reportes/cant-precio-por-mes"
+              >Cantidad de precio por mes</a
+            >
+          </li>
         </ul>
 
         <input type="checkbox" class="menu-toggle" />
