--- a/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.html
@@ -14,7 +14,7 @@
       </div>
       <h2>INICIAR SESIÓN</h2>
       <mat-form-field class="example-full-width">
-        <mat-label>Usuario</mat-label>
+        <mat-label>Username</mat-label>
         <input matInput placeholder="Username" [(ngModel)]="username" />
       </mat-form-field>
       <br />
