--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
@@ -144,17 +144,26 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field class="example-full-width">
-                <mat-label>password</mat-label>
+                <mat-label>Password</mat-label>
                 <input
                   matInput
-                  placeholder="password"
+                  [type]="hide ? 'password' : 'text'"
+                  type="password"
+                  matInput
+                  placeholder="Password"
                   formControlName="password"
                 />
-                <mat-error
-                  *ngIf="obtenerControlCampo('password')?.errors?.['required']"
+                <button
+                  mat-icon-button
+                  matSuffix
+                  (click)="hide = !hide"
+                  [attr.aria-label]="'Hide password'"
+                  [attr.aria-pressed]="hide"
                 >
-                  El password es obligatorio.
-                </mat-error>
+                  <mat-icon>{{
+                    hide ? "visibility_off" : "visibility"
+                  }}</mat-icon>
+                </button>
               </mat-form-field>
             </div>
             <div class="secciones">
