--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -32,10 +32,11 @@
             placeholder="Descripcion"
             formControlName="descripcion"
           />
-          <mat-error
-            *ngIf="obtenerControlCampo('descripcion')?.errors?.['required']"
-          >
-            El nombre es obligatorio.
+          <mat-error *ngIf="form.get('descripcion')?.invalid">
+            {{
+              form.get('descripcion')!.errors?.['required'] ? 'La descripcion es obligatorio' :
+              (form.get('descripcion')!.errors?.['maxlength'] ? 'No puede tener más de 100 caracteres' :'')
+            }}
           </mat-error>
         </mat-form-field>
 
